--- a/style.css
+++ b/style.css
@@ -590,6 +590,10 @@ footer span a:hover{
       margin-bottom: 35px;
     }
 
+    footer{
+      font-size: 12px;
+    }
+
 }
 
 @media (max-width: 690px){
